--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
+    "npm": "^11.6.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
