--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-loading-indicators": "^1.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.0",
     "styled-components": "^6.1.19",
     "yup": "^1.7.1"
   },
